tests/compile_fail/partial_eq/unknown_with_function.stderr
error[E0425]: cannot find function `unknown` in this scope
 --> tests/compile_fail/partial_eq/unknown_with_function.rs:2:30
  |
2 | struct Foo(#[partial_eq(with(unknown))] i32);
  |                              ^^^^^^^ not found in this scope

error[E0061]: this function takes 1 argument but 2 arguments were supplied
 --> tests/compile_fail/partial_eq/unknown_with_function.rs:7:30
  |
6 | #[derive(derive_more::PartialEq)]
  |          ----------------------
  |          |
  |          expected `&str`, found `&i32`
  |          unexpected argument #2 of type `&i32`
7 | struct Bar(#[partial_eq(with(incompatible_types))] i32);
  |                              ^^^^^^^^^^^^^^^^^^
  |
  = note: expected reference `&str`
             found reference `&i32`
note: function defined here
 --> tests/compile_fail/partial_eq/unknown_with_function.rs:4:4
  |
4 | fn incompatible_types(a:& str) ->i32 {0}
  |    ^^^^^^^^^^^^^^^^^^ -------

error[E0308]: mismatched types
 --> tests/compile_fail/partial_eq/unknown_with_function.rs:6:10
  |
6 | #[derive(derive_more::PartialEq)]
  |          ^^^^^^^^^^^^^^^^^^^^^^
  |          |
  |          expected `bool`, found `i32`
  |          expected `bool` because of return type
  |
  = note: this error originates in the derive macro `derive_more::PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `unknown` in this scope
  --> tests/compile_fail/partial_eq/unknown_with_function.rs:12:29
   |
12 |     Bar { #[partial_eq(with(unknown))] i: i32 },
   |                             ^^^^^^^ not found in this scope

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/compile_fail/partial_eq/unknown_with_function.rs:13:29
   |
10 | #[derive(derive_more::PartialEq)]
   |          ----------------------
   |          |
   |          expected `&str`, found `&i32`
   |          unexpected argument #2 of type `&i32`
...
13 |     Baz { #[partial_eq(with(incompatible_types))] i: i32 },
   |                             ^^^^^^^^^^^^^^^^^^
   |
   = note: expected reference `&str`
              found reference `&i32`
note: function defined here
  --> tests/compile_fail/partial_eq/unknown_with_function.rs:4:4
   |
 4 | fn incompatible_types(a:& str) ->i32 {0}
   |    ^^^^^^^^^^^^^^^^^^ -------

error[E0308]: mismatched types
  --> tests/compile_fail/partial_eq/unknown_with_function.rs:10:10
   |
10 | #[derive(derive_more::PartialEq)]
   |          ^^^^^^^^^^^^^^^^^^^^^^
   |          |
   |          expected `bool`, found `i32`
   |          expected `bool` because of return type
   |
   = note: this error originates in the derive macro `derive_more::PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `a`
 --> tests/compile_fail/partial_eq/unknown_with_function.rs:4:23
  |
4 | fn incompatible_types(a:& str) ->i32 {0}
  |                       ^ help: if this is intentional, prefix it with an underscore: `_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
